--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div id="map" class="map"></div>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfw80YXSof3XpXY-_gXRYRK9UuKiRqzyo"></script>
   <script src="./index.js"></script>
 </body>
 
